syntax = "proto3";

package auth;

enum METHOD {
    Auth = 0;
    SubAuth = 1;
    PubAuth = 2;
}

message AuthReq {
    string name = 1;
    string pwd = 2;

}

message AuthResp {
    string token = 1;
    bool verified = 2;
}

message TopicReq {
    string clientId = 1;
    string topic = 2;
}

message TopicResp {
    bool allow = 1;
}